--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -1,3 +1,37 @@
+@Misc{rossCrc,
+author = {Ross N. Williams},
+title = {A {P}ainless {G}uide {T}o {CRC} {E}rror {D}etection {A}lgorithms},
+month = {August},
+year = {1993},
+note = {\url{http://www.ross.net/crc/download/crc_v3.txt}, Accesat noiembrie 2016},
+}
+
+
+@Book{hackersDelight,
+author = {Warren Jr. and Henry S.},
+title = {Hacker's {D}elight},
+publisher = {Addison Wesley},
+year = {2002},
+note = {Prima Ediție},
+}
+
+
+@Book{tanenbaumCN,
+author = {Andrew S. Tanenbaum and David J. Wetherall},
+title = {Computer {N}etworks},
+publisher = {Prentice Hall},
+year = {2011},
+note = {Ediția a 5a},
+}
+
+
+@Misc{wikiCrc,
+author = {Wikipedia},
+title = {Cyclic redundancy check},
+note = {\url{https://en.wikipedia.org/wiki/Cyclic_redundancy_check}, Accesat februarie 2017},
+}
+
+
 @Manual{uTaskerSerial,
 title = {$\mu$Tasker – Serial Loader User’s Guide},
 author = { M.J.Butcher {C}onsulting },
