--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -1,3 +1,16 @@
+@Article{bogdanov,
+author = {Andrey Bogdanov and Dmitry Khovratovich and Christian Rechberger},
+title = {Biclique {C}ryptanalysis of the {F}ull {AES}},
+year = {2011},
+month = {August},
+}
+
+@Misc{wikiAes,
+author = {Wikipedia},
+title = {Advanced Encryption Standard},
+note = {\url{https://en.wikipedia.org/wiki/Advanced_Encryption_Standard}, Accesat noiembrie 2016},
+}
+
 @Misc{rossCrc,
 author = {Ross N. Williams},
 title = {A {P}ainless {G}uide {T}o {CRC} {E}rror {D}etection {A}lgorithms},
