--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -1,3 +1,34 @@
+@Article{nistGcm,
+author = {Morris Dworkin},
+title = {Recommendation for {B}lock {C}ipher {M}odes of {O}peration: {Galois/Counter Mode (GCM) and GMAC}},
+year = {2007},
+month = {Noiembrie},
+}
+
+@Article{gcmSpec,
+author = {David A. McGrew and John Viega},
+title = {The {Galois/Counter Mode of Operation (GCM)}},
+year = {2005},
+}
+
+
+@Book{rijndael,  
+author =
+ "Joan Daemen and Vincent Rijmen",
+ title =  
+"The design of {Rijndael}: {AES} --- the {Advanced 
+ Encryption Standard}", 
+ publisher = 
+"Spring{\-}er-Ver{\-}lag",
+ pages =  
+"238", 
+year =  
+ "2002", 
+ISBN =  
+ "3-540-42580-2" 
+} 
+
+
 @Article{bogdanov,
 author = {Andrey Bogdanov and Dmitry Khovratovich and Christian Rechberger},
 title = {Biclique {C}ryptanalysis of the {F}ull {AES}},
