--- a/bibliografie.bib
+++ b/bibliografie.bib
@@ -1,3 +1,19 @@
+@Misc{hddHack,
+author = {Spritesmods},
+title = {Hard disk hacking - {H}ooking up {JTAG}},
+month = {August},
+year = {2013},
+note = {\url{https://spritesmods.com/?art=hddhack&page=3}, Accesat octombrie 2016},
+}
+
+
+@Manual{nxpSecurity,
+title = {Using the {K}inetis {S}ecurity and {F}lash {P}rotection {F}eatures},
+author = {Melissa Hunter},
+organization = {Freescale Semiconductor},
+year = {2012},
+}
+
 @Article{nistGcm,
 author = {Morris Dworkin},
 title = {Recommendation for {B}lock {C}ipher {M}odes of {O}peration: {Galois/Counter Mode (GCM) and GMAC}},
@@ -11,23 +27,14 @@ title = {The {Galois/Counter Mode of Operation (GCM)}},
 year = {2005},
 }
 
-
 @Book{rijndael,  
-author =
- "Joan Daemen and Vincent Rijmen",
- title =  
-"The design of {Rijndael}: {AES} --- the {Advanced 
- Encryption Standard}", 
- publisher = 
-"Spring{\-}er-Ver{\-}lag",
- pages =  
-"238", 
-year =  
- "2002", 
-ISBN =  
- "3-540-42580-2" 
+author = "Joan Daemen and Vincent Rijmen",
+title =  "The design of {Rijndael}: {AES} --- the {Advanced Encryption Standard}", 
+publisher = "Spring{\-}er-Ver{\-}lag",
+pages = "238", 
+year =  "2002", 
+ISBN =  "3-540-42580-2" 
 } 
-
 
 @Article{bogdanov,
 author = {Andrey Bogdanov and Dmitry Khovratovich and Christian Rechberger},
